@@ -1,3 +1,9 @@
+2001-04-18  Martin Baulig  <baulig@suse.de>
+
+	* libgnome-init.c (gnome_oaf_module_info): Put this back.
+	(libbonobo_module_info): Put this here since Michael doesn't want to
+	have it in Bonobo.
+
 2001-04-17  Martin Baulig  <baulig@suse.de>
 
 	* libgnome-init.c (gnome_oaf_module_info): Removed; this is in libbonobo.
